# bluefire

./: Cargo.toml  Makefile  README.md
bluefire_backend/: Cargo.toml
bluefire_backend/src/: authentication.rs  background.rs  clock.rs  common.rs  context.rs  database.rs  email.rs  fetch.rs  lib.rs  rest.rs  router.rs  scheduler.rs  server.rs  static_files.rs  translations.rs  widgets.rs
bluefire_backend/src/database/: database.rs  mongodb.rs  mongodb_rust.rs  postgresql.rs
bluefire_backend/tests/: authentication.rs  rest.rs  router.rs  scheduler.rs  translations.rs
bluefire_backend/tests/common/: clock.rs  data_providers.rs  handlers.rs  mod.rs
bluefire_build/: Cargo.toml
bluefire_build/src/: cargo.rs  commands.rs  lib.rs  static_files.rs
bluefire_frontend/: Cargo.toml
bluefire_frontend/src/: authentication.rs  cookies.rs  elements.rs  fetch.rs  flow.rs  flowex.rs  lib.rs  web.rs  widgets.rs
bluefire_frontend/src/widgets/: communicates.rs  list.rs  overlay.rs  tag_area.rs
bluefire_languages/: Cargo.toml  build.rs
bluefire_languages/data/: languages.csv
bluefire_languages/src/: lib.rs
bluefire_macros/: Cargo.toml
bluefire_macros/src/: lib.rs  new_constant.rs
bluefire_macros/tests/: new_constant.rs
bluefire_protogen/: Cargo.toml
bluefire_protogen/src/: buffer.rs  lib.rs  rust_generator.rs  spec.rs  utils.rs
bluefire_protogen/templates/: methods.rs  paths.rs  reasons.rs  route.rs  routes.rs  types.rs  yields.rs
bluefire_protogen_macros/: Cargo.toml
bluefire_protogen_macros/src/: lib.rs
bluefire_protogen_macros/tests/: tests.rs
bluefire_static_files/: Cargo.toml  build.rs  static.yaml
bluefire_static_files/src/: lib.rs
bluefire_static_files_core/: Cargo.toml
bluefire_static_files_core/src/: lib.rs
bluefire_static_files_macros/: Cargo.toml
bluefire_static_files_macros/src/: lib.rs  static_files.rs
bluefire_static_files_macros/templates/: static_files.rs
bluefire_translations/: Cargo.toml
bluefire_translations/src/: lib.rs
bluefire_translations_derive/: Cargo.toml
bluefire_translations_derive/src/: lib.rs
bluefire_translations_derive/tests/: translations.rs
bluefire_translations_derive/tests/translations/: en.yaml  es.yaml  testing.txt
bluefire_twine/: Cargo.toml
bluefire_twine/src/: class_names.rs  constants.rs  id.rs  lib.rs  message.rs  method.rs  validation.rs
resources/static/: base.scss  colors-gray.scss  colors-steelblue.scss  colors-vermilion.scss  rst.scss  theme-gray.scss  theme-steelblue.scss  theme-vermilion.scss
