[workspace]

members = [
        "bluefire_languages",
        "bluefire_translations",
        "bluefire_translations_derive",

        "bluefire_static_files_core",
        "bluefire_static_files_macros",
        "bluefire_static_files",
        "bluefire_build",

        "bluefire_twine",
        "bluefire_macros",

        "bluefire_backend",
        "bluefire_frontend",

        "bluefire_protogen",
        "bluefire_protogen_macros",
    ]

[patch.crates-io]

bluefire_languages = { path = 'bluefire_languages' }
bluefire_translations = { path = 'bluefire_translations' }
bluefire_translations_derive = { path = 'bluefire_translations_derive' }

bluefire_static_files_core = { path = 'bluefire_static_files_core' }
bluefire_static_files_macros = { path = 'bluefire_static_files_macros' }
bluefire_static_files = { path = 'bluefire_static_files' }
bluefire_build = { path = 'bluefire_build' }

bluefire_twine = { path = 'bluefire_twine' }
bluefire_macros = { path = 'bluefire_macros' }

bluefire_backend = { path = 'bluefire_backend' }
bluefire_frontend = { path = 'bluefire_frontend' }

bluefire_protogen = { path = 'bluefire_protogen' }
bluefire_protogen_macros = { path = 'bluefire_protogen_macros' }

