[package]
name = "bluefire_backend"
version = "0.1.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]
edition = "2018"
publish = false

[features]
default = []

authentication = ["base64", "database", "rand", "rust-crypto", "bluefire_twine"]
background = []
database = []
database_mongodb = ["database", "bson", "mongo_driver"]
database_postgresql = ["database", "postgres"]
email = ["lettre", "lettre_email", "uuid"]
fetch = ["reqwest"]
rest = ["serde", "serde_derive", "serde_json", "bluefire_twine"]
router = []
scheduler = []
static_files = []
server = ["futures", "hyper"]
translations = ["bluefire_translations"]

[dependencies]
chrono = "0.4.9"
http = "0.1.18"
log = "0.4.8"
traitobject = "0.1.0"

base64 = { version = "0.10.1", optional = true }
bson = { version = "0.11.0", optional = true }
futures = { version = "0.1", optional = true }
hyper = { version = "0.12.35", optional = true }
lettre = { version = "0.9.2", optional = true }
lettre_email = { version = "0.9.2", optional = true }
mongo_driver = { version = "0.12.1", optional = true }
postgres = { version = "0.15.2", optional = true }
rand = { version = "0.7", optional = true }
reqwest = { version = "0.9.21", optional = true }
rust-crypto = { version = "0.2.36", optional = true }
serde = { version = "1.0.101", optional = true }
serde_derive = { version = "1.0.101", optional = true }
serde_json = { version = "1.0.40", optional = true }
uuid = { version = "0.7.4", optional = true, features = ["v4"] }

bluefire_twine = { version = "0.1", optional = true }
bluefire_translations = { version = "0.1.0", optional = true }

