[package]
name = "bluefire_frontend"
version = "0.1.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]
edition = "2018"
publish = false

[features]
default = []

elements = ["maud", "wasm-bindgen", "web"]
elements_all = ["elements", "elements_input", "elements_select", "elements_textarea"]
elements_input = ["elements"]
elements_select = ["elements"]
elements_textarea = ["elements"]

authentication = ["cookies"]
cookies = ["chrono", "web-sys", "wasm-bindgen", "web"]
fetch = ["js-sys", "web-sys", "authentication", "bluefire_twine"]
flow = ["js-sys", "wasm-bindgen", "web-sys", "web"]
flowex = ["web", "flow"]
web = ["web-sys", "console_error_panic_hook"]

[dependencies.chrono]
version = "0.4.9"
optional = true

[dependencies.wasm-bindgen]
version = "0.2.51"
optional = true
features = ["serde-serialize"]

[dependencies.js-sys]
version = "0.3.6"
optional = true

[dependencies.web-sys]
version = "0.3.6"
optional = true
features = [
    "Window", "Document", "HtmlDocument", "Location", "History",
    "Node", "DataTransfer", "DomRect", "DomTokenList", "HtmlCollection",
    "Element", "HtmlElement", "HtmlInputElement", "HtmlSelectElement", "HtmlTextAreaElement",
    "EventListener", "Event", "DragEvent", "KeyboardEvent", "MouseEvent", "EventTarget",
    "Request", "RequestInit", "Response", "Headers",
    "console"
]

[dependencies.console_error_panic_hook]
version = "0.1"
optional = true

[dependencies.maud]
version = "0.21.0"
optional = true

[dependencies.bluefire_twine]
version = "0.1"
optional = true

