[package]
name = "bluefire_protogen"
version = "0.1.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "protogen"
path = "bin/protogen.rs"

[dependencies]
clap = "2.32"
http = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
bluefire_twine = "0.1.0"

