[package]
name = "bluefire_protogen"
version = "0.1.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "protogen"
path = "bin/protogen.rs"

[features]
fmt = ["rustfmt-nightly"]

[dependencies]
askama = { version = "0.8" }
clap = { version = "2.32" }
http = { version = "0.1" }
serde = { version = "1.0" }
serde_derive = { version = "1.0" }
serde_yaml = { version = "0.8" }
rustfmt-nightly = { version = "1.3.2", optional = true }
bluefire_twine = { version = "0.1.0" }


