[package]
name = "bluefire_protogen"
version = "0.1.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]
edition = "2018"
publish = false

[[bin]]
name = "protogen"
path = "bin/protogen.rs"

[features]
fmt = ["rustfmt-nightly"]

[dependencies]
askama = "0.8.0"
clap = "2.33.0"
http = "0.1.18"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_yaml = "0.8.9"
rustfmt-nightly = { version = "1.4", optional = true }
bluefire_twine = { version = "0.1" }


