[package]
name = "bluefire_protogen_macros"
version = "0.1.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "0.4" }
syn = { "version" = "0.15", features = ["full"] }
quote = { "version" = "0.6" }
bluefire_protogen = { version = "0.1.0" }

