[package]
name = "bluefire_protogen_macros"
version = "0.1.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.4"
syn = { "version" = "1.0.5", features = ["full"] }
quote = "1.0.2"
bluefire_protogen = { version = "0.1.0" }

[dev-dependencies]
serde = "1.0.101"
serde_derive = "1.0.101"
serde_urlencoded = "0.6.1"
