[package]
name = "bluefire_static_files_macros"
version = "0.1.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.4"
syn = { "version" = "1.0.5", features = ["full"] }
askama = "0.8.0"
bluefire_build = "0.1.0"
bluefire_static_files_core = "0.1.0"
