[package]
name = "bluefire_translations_derive"
version = "0.1.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
syn = { "version" = "1.0", features = ["full"] }
quote = { "version" = "1.0" }
serde = { version = "1.0" }
serde_derive = { version = "1.0" }
serde_yaml = { version = "0.8" }

[dev-dependencies]
bluefire_translations = { version = "0.1.0" }

