[package]
name = "bluefire_translations_derive"
version = "0.1.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]
edition = "2018"
publish = false

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.4"
syn = { "version" = "1.0.5", features = ["full"] }
quote = "1.0.2"
serde = "1.0.101"
serde_derive = "1.0.101"
serde_yaml = "0.8.9"

[dev-dependencies]
bluefire_translations = { version = "0.1.0" }

