[package]
name = "bluefire_twine"
version = "0.1.0"
authors = ["Wojciech Kluczka <wojciech.kluczka@gmail.com>"]
edition = "2018"
publish = false

[features]
default = []
bson_conversion = ["bson"]

[dependencies]
byteorder = "1.3"
checkmail = "0.1"
hex = "0.4"
serde = "1.0.101"
serde_derive = "1.0.101"

bson = { version = "0.11", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rand = "0.7"
chrono = "0.4.9"

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3.6"

